<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/banksakuWhite">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:titleTextColor="@android:color/black"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help"
                android:textSize="24sp"
                android:layout_marginRight="@dimen/action_bar_margin"
                android:gravity="center_horizontal"
                android:textColor="@android:color/black"
                android:fontFamily="@font/roboto_regular"/>
        </android.support.v7.widget.Toolbar>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_margin="@dimen/activity_horizontal_margin"
            app:cardCornerRadius="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/criticism_suggestion"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:fontFamily="@font/roboto_regular"/>
            <Button
                android:id="@+id/buttonSendEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="@string/send_email"
                android:background="@color/banksakuColor"
                android:textColor="@color/banksakuWhite"
                android:fontFamily="@font/roboto_regular"/>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/income_feature"
                    android:layout_margin="@dimen/activity_vertical_margin"
                    android:fontFamily="@font/roboto_regular"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/expanse_feature"
                    android:layout_margin="@dimen/activity_vertical_margin"
                    android:fontFamily="@font/roboto_regular"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/plan_feature"
                    android:layout_margin="@dimen/activity_vertical_margin"
                    android:fontFamily="@font/roboto_regular"/>
            </LinearLayout>

        </android.support.v7.widget.CardView>
    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:itemTextColor="@color/banksakuWhite"
        app:itemIconTint="@color/banksakuWhite"
        android:background="@color/banksakuColor"
        app:headerLayout="@layout/nav_header_home"
        app:menu="@menu/activity_home_drawer" />
</android.support.v4.widget.DrawerLayout>