<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/banksakuWhite"
        tools:context=".fragment.AddTransactionFragment">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbarTransaction"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">

                <ImageView
                    android:id="@+id/imageViewArrowBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_arrow_back"
                    android:layout_weight="0"
                    android:layout_gravity="center"/>
                <TextView
                    android:id="@+id/titleToolbar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_transaction"
                    android:fontFamily="@font/roboto_regular"
                    android:textSize="24sp"
                    android:textColor="@android:color/black"
                    android:gravity="center_horizontal"
                    android:layout_weight="2.8"/>
                <ImageView
                    android:id="@+id/imageViewDelete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_delete"
                    android:layout_weight="0"
                    android:layout_gravity="center"/>
            </LinearLayout>
        </android.support.v7.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="25dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin">

                <com.aldoapps.autoformatedittext.AutoFormatEditText
                    android:id="@+id/editTextAmount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:theme="@style/BanksakuLineColorTheme"
                    android:fontFamily="@font/roboto_regular"
                    android:layout_weight="0.2"
                    android:hint="@string/amount"/>
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:textColor="@color/banksakuColor"
                android:layout_marginLeft="@dimen/transaction_margin"
                android:fontFamily="@font/roboto_medium"/>

            <Spinner
                android:id="@+id/spinnerCategory"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:theme="@style/BanksakuLineColorTheme"
                android:fontFamily="@font/roboto_regular"
                style="@style/Base.Widget.AppCompat.Spinner.Underlined"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_marginBottom="@dimen/activity_vertical_margin">

                <TextView
                    android:id="@+id/textViewDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/date"
                    android:layout_marginLeft="@dimen/transaction_margin"
                    android:fontFamily="@font/roboto_regular"/>
                <TextView
                    android:id="@+id/textViewSelectDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/choose_date"
                    android:layout_weight="1.5"
                    android:gravity="end"
                    android:textColor="@color/banksakuColor"
                    android:fontFamily="@font/roboto_regular"/>

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editTextNote"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/note"
                    android:maxLines="1"
                    android:fontFamily="@font/roboto_medium"/>
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/textViewReminder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/set_reminder"
                android:textColor="@color/banksakuColor"
                android:layout_marginLeft="@dimen/transaction_margin"
                android:fontFamily="@font/roboto_medium"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2">

                <EditText
                    android:id="@+id/editTextReminderDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:theme="@style/BanksakuLineColorTheme"
                    android:fontFamily="@font/roboto_regular"
                    android:hint="@string/time"
                    android:layout_weight="1"
                    android:focusable="false"/>

                <EditText
                    android:id="@+id/editTextReminderTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:theme="@style/BanksakuLineColorTheme"
                    android:fontFamily="@font/roboto_regular"
                    android:hint="@string/hour"
                    android:layout_weight="1"
                    android:focusable="false"/>

            </LinearLayout>

            <Button
                android:id="@+id/buttonAddTransaction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:background="@drawable/rounded_button"
                android:textColor="@color/banksakuWhite"
                android:fontFamily="@font/roboto_bold"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>