<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/linearLayout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:elevation="16dp"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <ImageView
                android:id="@+id/imageTransaction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_menu_send"
                android:layout_weight="1.3"
                android:layout_gravity="center_vertical"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                android:layout_weight="0.7">

                <TextView
                    android:id="@+id/titleTransaction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/shopping"
                    android:fontFamily="@font/roboto_medium"
                    android:textColor="@android:color/black"/>

                <TextView
                    android:id="@+id/noteTransaction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/toiletries"
                    android:maxLines="1"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/timeTransaction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/time_example"
                    android:gravity="end"/>

                <TextView
                    android:id="@+id/priceTransaction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/price"
                    android:textColor="@color/banksakuPrice"
                    android:gravity="end"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>